# juce-shared-plugin-editor-component

./: CMakeLists.txt  PluginProcessor.cpp  README.md  main.cpp
Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Shared/: PluginEditorComponent.h  StandaloneFilterApp.cpp  StandaloneFilterApp.h
shared/: PluginEditorComponent.h
shared/standalone/: StandaloneFilterApp.cpp  StandaloneFilterApp.h  TransportPlayer.h
